@@ -1,6 +1,7 @@
 #! /usr/bin/env python
 
-# Copyright (C) 2008, 2009 EPITA Research and Development Laboratory (LRDE)
+# Copyright (C) 2008, 2009, 2013 EPITA Research and Development
+# Laboratory (LRDE)
 #
 # This file is part of Olena.
 #
@@ -30,7 +31,7 @@ from neighb2d import *
 from window2d import *
 
 from int_u8 import *
-from int_u32 import *
+from int_u24 import *
 
 import image2d_int
 import image2d_int_u8
