@@ -1,3 +1,13 @@
+2013-03-05  Roland Levillain  <roland@lrde.epita.fr>
+
+	Replace remaining uses of mln::morpho::meyer_wst in Swilena.
+
+	* morpho.ixx: Here, by mln::morpho::watershed::flooding.
+	* image2d_int_u8.i,
+	* python/swilena.py,
+	* python/morpho-segm.py:
+	Adjust.
+
 2012-10-05  Roland Levillain  <roland@lrde.epita.fr>
 
 	No longer wrap mln::value::int_u32.
